syntax = "proto3";

package PDUI;

message PBScaffold {
  PBExpression appBar = 1;
  PBExpression body = 2;
}

message PBAppBar {
  string backgroundColor = 1;
  string title = 2;
}

message PBCenter {
  PBExpression child = 1;
}

message PBText {
  string data = 1;
}

message PBColumn {
  repeated PBExpression children = 1;
}

message PBElevatedButton {
  PBExpression child = 1;
  PBFnExpression onPressed = 2;
}

message PBForm {
  PBExpression child = 1;
}

enum PBKeyboardType {
  TEXT = 0;
  EMAIL_ADDRESS = 1;
  NUMBER = 2;
  MULTILINE = 3;
  DATE_TIME = 4;
}

message PBTextFormFieldDecoration {
  optional string labelText = 1;
}

message PBTextFormField {
  string formKey = 1;
  optional PBKeyboardType keyboardType = 2;
  optional PBTextFormFieldDecoration decoration = 3;
  optional bool obscureText = 4;
  optional bool notEmpty = 5;
  optional int32 minLength = 6;
  optional int32 maxLength = 7;
  optional int32 maxLines = 8;
}

enum PBDataType {
  STRING = 0;
  INT = 1;
  FLOAT = 2;
  BOOLEAN = 3;
}

message PBFnParameter {
  string name = 1;
  PBDataType type = 2;
  oneof value {
    string stringValue = 3;
    int32 intValue = 4;
    float floatValue = 5;
    bool booleanValue = 6;
  }
}

message PBFn {
  optional string name = 1;
  map<string, PBFnParameter> params = 2;
  map<string, PBFnExpression> body = 3;
}

message PBDebugPrint {
  optional PBExpression expression = 1;
  optional PBFnExpression fnExpression = 2;
}

message PBNavigation {
  string expressionId = 1;
  //TODO: Support data on navigation
}

message PBPopNavigation {
  //TODO: Support data on pop
}

message PBGetFormData {
  string formKey = 1;
}

message PBValidateForm {
  string formKey = 1;
}

message PBFnExpression {
  string identity = 1;
  oneof payload {
    PBFn genericFn = 2;
    PBDebugPrint debugPrint = 3;
    PBNavigation navigation = 4;
    PBPopNavigation popNavigation = 5;
    PBGetFormData getFormData = 6;
    PBValidateForm validateForm = 7;
  }
}

message PBExpression {
  optional string key = 1;
  string identity = 2;
  oneof payload {
    string rawString = 3;
    PBScaffold scaffold = 4;
    PBCenter center = 5;
    PBText text = 6;
    PBAppBar appBar = 7;
    PBColumn column = 8;
    PBElevatedButton elevatedButton = 9;
    PBForm form = 10;
    PBTextFormField textFormField = 11;
  }
}
